# Kursovaya_4_OOP_Purenkov_A_S

./: main.py  pyproject.toml
data/: hh.json  privet.db
src/: class_HeadHunterAPI.py  class_abstractn.py  class_record.py  class_serch_param.py  class_vcacansy.py  fanc.py  prob.py
tests/: test_classHeadHunterAPI.py  test_class_record.py  test_classvcansy.py
