[tool.poetry]
name = "kursovaya-4-oop-purenkov-a-s-"
version = "0.1.0"
description = ""
authors = ["whitenesss <144126783+whitenesss@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
prettytable = "^3.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
